separated normal play and training and made training.py added matplotlib codes to visualize reward after the training

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@
 # Modules:
 # - random: for randomness in player selection and agent actions.
 # - csv: for saving/loading Q-table data to/from CSV.
+
+matplotlib~=3.7.1
